[package]
name = "my-project"
version = "0.1.0"
authors = ["Jing Cui <jingcui99@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A mini calculator project to test slint and rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"

[build-dependencies]
slint-build = "1.3"

[package.metadata.bundle]
name = "RustCalculator"
identifier = "io.github.JingQunCui.RustCalculator"
